src/objects/Etapa__c.object
<CustomObject>
    <fields>
        <fullName>DefinitivnaUzavierka__c</fullName>
        <label>Definitívna uzávierka</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FixnutieMurovaciek__c</fullName>
        <label>Fixnutie Murovačiek</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FixnutieProfesii__c</fullName>
        <label>Fixnutie Profesií</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FixnutieStatiky__c</fullName>
        <label>Fixnutie Statiky</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UzavierkaKLZ__c</fullName>
        <label>Uzávierka KLZ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UzavierkaStandardov__c</fullName>
        <label>Uzávierka štandardov</label>
        <type>Date</type>
    </fields>
    <label>Etapa</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Etapa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etapy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>